Fixed box overlapping quotesec when wrapping
Remove justify content and height from informationsec.
Remove direction and align item from quotesec, add margin.

--- a/styles.css
+++ b/styles.css
@@ -101,8 +101,7 @@ button {
     
 .informationsec {
     display: flex;
-    justify-content: start;
-    height: 500px;
+
     flex-direction: column;
     align-items: center;
     padding-top: 30px;
@@ -133,7 +132,7 @@ button {
     flex-shrink: 0;
     min-width: 200px;
     min-height: 200px;
-    margin: 20px; 
+    margin: 20px;
 }
 
 .boxandsubtext {
@@ -141,8 +140,8 @@ button {
     flex-direction: column;
     align-items: center;
     flex-wrap: wrap;
-    
 }
+
 .subtextcontainer {
     display: flex;
     flex-wrap: wrap;
@@ -156,19 +155,22 @@ button {
     margin: 0px 50px;
     flex-shrink: 0;
 }
+
+.boxwrapper {
+    background-color: red;
+}
  
 .quotesec {
     background-color: #e5e7eb;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-shrink: 1;
     padding:100px 500px;
-    color: #1F2937
+    color: #1F2937;
+    margin-top: 200px;
 }
 
 .quote {
     font-style: italic;
-    
     font-size: 37px;
 }
 
@@ -176,4 +178,9 @@ button {
     align-self: end;
     font-weight: bolder;
     font-size: 20px;
+}
+
+.fullquotetext {
+    display: flex;
+    flex-direction: column;
 }
